<resources>
    <string name="app_name">Atm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contatos">Contatos</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_principal">Principal</string>
    <string name="Atm">ATM Consultoria</string>

    <string name="Email_atm">atm.android@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>