<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicial"
            android:icon="@drawable/ic_menu_pricinpal_24"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_menu_servicos_24"
            android:title="@string/menu_servicos" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_clentes_24"
            android:title= "@string/menu_clientes" />
        <item
            android:id="@+id/nav_contato"
            android:icon="@drawable/ic_email_24"
            android:title= "@string/menu_contatos" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info_24"
            android:title= "@string/menu_sobre" />
    </group>
</menu>